# kaspaforge

./: .gitignore  LICENSE  README.md  RECOVERY-SHA256SUMS
.github/workflows/: android-apk.yml  release-apk.yml  remove-stale-apk.yml
app/: .gitignore  README.md  package.json
app/android-patches/: MainActivity.kt
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
contracts/: vault.sil
recovery-kit/: Cargo.toml  EXPECTED-FILES.txt  RECOVERY-SHA256SUMS  keyfile-decrypt.html
recovery-kit/cli/dealctl/: Cargo.toml
recovery-kit/cli/dealctl/src/: commands.rs  envelope.rs  extract.rs  lib.rs  main.rs  node.rs  preview.rs  txbuild.rs
recovery-kit/cli/dealctl/tests/: cli.rs  simnet_e2e.rs
recovery-kit/crates/kaspa-forge-contracts/: Cargo.toml  README.md  escrow.sil
recovery-kit/crates/kaspa-forge-contracts/src/: escrow.rs  lib.rs  recovery.rs  registry.rs  tx.rs  vectors.rs
recovery-kit/crates/kaspa-forge-contracts/tests/: escrow_vm.rs  vectors.rs
recovery-kit/crates/kaspa-forge-contracts/vectors/: v1.json
recovery-kit/recovery/: README-RU.md  README.md
recovery-kit/recovery/fixtures/: README.md  deal-recovery.attack-fee-budget-too-high.json  deal-recovery.attack-incomplete-missing-sk.json  deal-recovery.attack-modified-arbiter-key.json  deal-recovery.attack-modified-buyer-key.json  deal-recovery.attack-modified-fee-key.json  deal-recovery.attack-modified-seller-key.json  deal-recovery.attack-tampered-active-address.json  deal-recovery.attack-unknown-source.json  deal-recovery.attack-uppercase-hex.json  deal-recovery.attack-wrong-network.json  deal-recovery.attack-wrong-party-key.json  deal-recovery.attack-wrong-role.json  deal-recovery.valid.json
recovery-kit/recovery/schema/: deal-recovery-v1.schema.json  line-package-v1.schema.json  mutual-signature-v1.schema.json  signed-tx-v1.schema.json  watch-v1.schema.json
vaultctl/: Cargo.toml
vaultctl/src/: main.rs  multi_utxo.rs  ops.rs  recovery.rs  vault.rs
web/: .gitignore  boards.html  contracts.html  create.html  deal.html  deposit-index.html  desk-legacy.html  desk.html  escrow-index.html  escrow.html  index.html  kaspa-forge.html  keyfile-decrypt.html  listing-new.html  llms.txt  manage.html  manifest-escrow.json  manifest-forge.json  manifest.json  market.html  privacy-escrow.html  privacy.html  recover-escrow.html  recover.html  robots-escrow.txt  robots-forge.txt  robots.txt  security.html  sitemap-escrow.xml  sitemap-forge.xml  sitemap.xml  sw-escrow.js  sw-forge.js  sw.js  terms.html
web/.well-known/: security.txt
web/agents/: index.html
web/assets/: agents-page.test.js  alarm-sync-docs.test.js  app.js  boards-ru.test.js  boards-thread-tail.test.js  boards.js  boards.test.js  catalog.schema.test.js  contracts-catalog.json  contracts.js  contracts.test.js  core6.js  core7.js  deposit-docs.test.js  deposit-landing.css  deposit-landing.test.js  desk-overview.js  desk-overview.test.js  desk-routes.js  desk-routes.test.js  desk-tour.js  desk-tour.test.js  desk.css  dialog.js  digital-marketplace.test.js  escrow-widget.js  escrow.css  escrow.js  forge-landing-redesign.test.js  forge-landing.css  github-canonical.test.js  identity.js  identity.test.js  kaspa-widget.js  listing-chat.js  lock-ui.js  manage-entry.test.js  nav-boards.test.js  nav.js  netstat.js  (+26 more)
web/blog/: client-side-keys-kaspa-desk.html  google-agent-skills-repo.html  index.html  inside-kaspa-safe-covenant-vault.html  kaspa-10-bps-one-second-confirmations.html  kaspa-ai-agent-hackathon-developer-outreach.html  kaspa-blockdag-coinbase-rewards-explained.html  kaspa-blockdag-ghostdag-explained.html  kaspa-covenants-how-they-work.html  kaspa-daa-pruning-explained.html  kaspa-deterministic-key-derivation-backup.html  kaspa-escrow-covenant-spending-paths.html  kaspa-forge-hd-key-derivation.html  kaspa-forge-key-derivation-desk.html  kaspa-payments-xpub-utxo-watching.html  kaspa-post-toccata-operator-checklist.html  kaspa-safe-watcher-off-chain-monitoring.html  kaspa-toccata-launch-covenants-live.html  kaspalytics-kaspa-covenants-opcodes-protocol-activity.html  pow-self-custody-trustless-tools.html  robinhood-chain-tokenized-stocks.html  running-own-kaspa-node-services.html
web/boards/: rules.html
web/docs/: deposit.html  desk.html  escrow.html  index.html  market.html  safe.html  security.html
web/ru/: boards.html  contracts.html  create.html  (+16 more)
(+39 files in other folders)
