[package]
name = "kaspa-safe"
version = "0.1.1"
description = "Kaspa Safe — non-custodial vault for KAS, Android app"
authors = ["OfficeForge"]
edition = "2021"

[lib]
name = "kaspa_safe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
