[package]
name = "dealctl"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/Kaspaforge/kaspaforge"
description = "Public party-side recovery CLI for Kaspa Forge Escrow and Deposit. Rebuilds and signs any covenant path your key authorizes, against any Kaspa v2+ node, with no Kaspa Forge server."

[[bin]]
name = "dealctl"
path = "src/main.rs"

[dependencies]
# The single shared covenant core (escrow builders + tx primitives). NO hosted-server dependency.
kaspa-forge-contracts = { path = "../../crates/kaspa-forge-contracts" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }
# Direct gRPC to a user-selected Kaspa node (getUtxosByAddresses / getBlockDagInfo / submitTransaction).
kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }
secp256k1 = { version = "0.29.0", features = ["global-context"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# A recovery tool must never let a sompi computation wrap silently.
[profile.release]
overflow-checks = true

